--- a/.xmake/windows/x64/xmake.conf
+++ b/.xmake/windows/x64/xmake.conf
@@ -10,6 +10,17 @@
         "gfortran",
         "fpc"
     },
+    __toolchains_windows_x86 = {
+        "msvc",
+        "yasm",
+        "nasm",
+        "cuda",
+        "rust",
+        "swift",
+        "go",
+        "gfortran",
+        "fpc"
+    },
     arch = "x64",
     buildir = "build",
     ccache = true,
